/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.8/userguide/building_java_projects.html
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

group "com.wynntils.eventbustransformer"
version = "2.0.0"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
    withSourcesJar()
}

repositories {
    mavenCentral()
    maven {
        url "https://maven.minecraftforge.net/"
    }
    maven {
        url "https://maven.architectury.dev/"
    }
}

compileJava {
    // Architectury transformer embeds org.objectweb.asm.commons module-info
    options.compilerArgs += [
        "--add-exports=org.objectweb.asm.commons/dev.architectury.transformer.transformers.base=com.wynntils.eventbustransformer",
        "--add-exports=org.objectweb.asm.commons/dev.architectury.transformer.shadowed.impl.org.objectweb.asm.tree=com.wynntils.eventbustransformer",
        "--add-exports=org.objectweb.asm.commons/dev.architectury.transformer.shadowed.impl.org.objectweb.asm=com.wynntils.eventbustransformer"
        ]
}

dependencies {
    implementation("net.minecraftforge:eventbus:6.0.+") {
//        exclude group: "cpw.mods", module: "modlauncher"
    }
    implementation "dev.architectury:architectury-transformer:5.2.+"
    implementation "commons-io:commons-io:2.11.+"
    implementation "org.ow2.asm:asm:9.2"
    implementation "org.ow2.asm:asm-analysis:9.2"
    implementation "org.ow2.asm:asm-commons:9.2"
    implementation "org.ow2.asm:asm-tree:9.2"
    implementation "org.apache.logging.log4j:log4j-api:2.17.1"
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId "com.github.coehlrich"
        }
    }
}
